--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ button:hover {
 }
 
 #toggleGuide {
-    display: flex;
+    display: block;
+    margin: 10px auto
     align-items: center;
     justify-content: center;
     background-color: #28a745;
@@ -80,5 +81,5 @@ button:hover {
 }
 
 #guideContent b {
-    color: #007bff;
+    color: black;
 }
