--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ button:hover {
 
 #toggleGuide {
     display: block;
-    margin: 0 auto
+    margin: 0 auto;
     text-align: center;
     align-items: center;
     justify-content: center;
