--- a/style.css
+++ b/style.css
@@ -85,3 +85,12 @@ button:hover {
 #guideContent b {
     color: black !important; /* Chữ in đậm chuyển thành màu đen */
 }
+
+#signature {
+    text-align: right;
+    margin-top: 20px;
+    padding: 10px;
+    font-size: 8px;
+    color: #555;
+    font-style: italic;
+}
