--- a/style.css
+++ b/style.css
@@ -87,10 +87,10 @@ button:hover {
 }
 
 #signature {
-    text-align: right;
-    margin-top: 20px;
-    padding: 10px;
-    font-size: 8px;
-    color: #555;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    font-size: 12px;
+    color: #777;
     font-style: italic;
 }
